fixed chat wrap bug

--- a/LetsPlay/wwwroot/StyleSheet.css
+++ b/LetsPlay/wwwroot/StyleSheet.css
@@ -45,6 +45,7 @@
     padding: 10px 10px 12px 10px;
     float: left;
     line-height: 1.3;
+    overflow-wrap: break-word;
 }
 
 .myMessage {
@@ -55,7 +56,6 @@
     padding: 10px 10px 12px 10px;
     float: right;
     clear: both;
-    text-wrap: normal;
     overflow-wrap: break-word;
     text-align: left;
     line-height: 1.3;
